_build/html/reports/2_intro_functiontask.log
Traceback (most recent call last):
  File "/Users/yibeichen/miniconda3/envs/pydra/lib/python3.7/site-packages/jupyter_cache/executors/utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "/Users/yibeichen/miniconda3/envs/pydra/lib/python3.7/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/yibeichen/miniconda3/envs/pydra/lib/python3.7/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/yibeichen/miniconda3/envs/pydra/lib/python3.7/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/Users/yibeichen/miniconda3/envs/pydra/lib/python3.7/asyncio/base_events.py", line 587, in run_until_complete
    return future.result()
  File "/Users/yibeichen/miniconda3/envs/pydra/lib/python3.7/site-packages/nbclient/client.py", line 664, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "/Users/yibeichen/miniconda3/envs/pydra/lib/python3.7/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Users/yibeichen/miniconda3/envs/pydra/lib/python3.7/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
:tags: ["hide-cell"]

@pydra.mark.task
@pydra.mark.annotate({"return": {"mean": ty.Any, "std": ty.Any}})
def mean_dev(my_list):
    import statistics as st
    return st.mean(my_list), st.stdev(my_list)

my_task = mean_dev(my_list=[2, 2, 2])
my_task()
my_task.result()
------------------

[0;36m  File [0;32m"/var/folders/wr/x5xt_yqs2cvc_gb3sf147lvc0000gn/T/ipykernel_70990/1567334023.py"[0;36m, line [0;32m1[0m
[0;31m    :tags: ["hide-cell"][0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (1567334023.py, line 1)

